--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo-Mobile-App</title>
+    <!-- daisyUI cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!-- tailwind  cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    
+<body class="bg-[#f4f5f7] h-[100vh] flex flex-col justify-center items-center">
+    <div class="h-[130px] w-[300px] bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center">
+        <img src="./assets/Group.png" alt="">
+    </div>
+    <form class=" bg-white rounded-2xl p-8 w-[350px] font-semibold">
+        <div class="mt-3">
+            <label for="">Mobile Number</label><br>
+            <input type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] mt-3 rounded-full border-none " />
+        </div>
+
+        <div class="mt-3" >
+            <label  for="">Pin</label><br>
+            <input type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] mt-3 rounded-full border-none" />
+        </div>
+        <button class="btn btn-primary mt-5 w-full rounded-full text-white bg-[#0874F2] border-none" >Login</button>
+    </form>
 </body>
 </html>
