add money feature added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
             <label  for="">Pin</label><br>
             <input type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] mt-3 rounded-full border-none" />
         </div>
-        <button class="btn btn-primary mt-5 w-full rounded-full text-white bg-[#0874F2] border-none" >Login</button>
+        <button class="btn btn-primary mt-5 w-full rounded-full text-white bg-[#0874F2] border-none" id="loginButton" >Login</button>
     </form>
+
+
+
+    <!-- js script -->
+    <script src="./script.js"></script>
 </body>
 </html>
