--- a/home.html
+++ b/home.html
@@ -19,10 +19,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
   </head>
-  <body class="bg-[#f4f5f7] h-[100vh]">
+  <body class="bg-[#f4f5f7] h-[100vh] ">
     <!-- Header -->
     <div
-      class="flex justify-between items-center max-w-lg m-auto border-b-1 border-gray-400 p-3"
+      class="flex justify-between items-center max-w-lg m-auto border-b-1 border-gray-400 p-4 "
     >
       <div class="flex">
         <img src="./assets/Group.png" alt="" class="h-[50px]" />
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Welcome -->
-    <div class="max-w-lg m-auto mt-8">
+    <div class="max-w-lg m-auto mt-8 p-4">
       <h1 class="text-2xl font-bold">🔥 Welcome to Payooo!</h1>
       <p class="text-[#898686] mt-3">
         Enjoy easy and convenient financial services with us. Cashout charge is
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Services Grid -->
-    <div class="min-h-[200px] max-w-lg m-auto mt-8 grid grid-cols-3 gap-4">
+    <div class="min-h-[200px] max-w-lg m-auto mt-8 grid grid-cols-3 gap-4 p-4">
       <div class="border-1 border-gray-300 text-center p-3 rounded-xl">
         <img src="./assets/wallet1.png" class="mx-auto" alt="" />
         <h2>Add Money</h2>
